--- a/productsManagement/src/main/resources/static/index.csr.html
+++ b/productsManagement/src/main/resources/static/index.csr.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body ngcm="">
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-QYNRJXE3.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-SW2D3U2Y.js" type="module"></script></body>
 </html>
